--- a/helm-guestbook/app2-values.yaml
+++ b/helm-guestbook/app2-values.yaml
@@ -2,12 +2,16 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
+replicaCount: 2
 
 image:
   repository: gcr.io/google-samples/gb-frontend
   tag: v5
   pullPolicy: IfNotPresent
+
+env:
+  app-name: coveo-app2
+  db-name: coveo-dbb02
 
 containerPort: 80
 
