--- a/helm-guestbook/templates/deployment.yaml
+++ b/helm-guestbook/templates/deployment.yaml
@@ -24,6 +24,11 @@ spec:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          env:
+            name: app-name
+            value: {{.Values.env.app-name}}
+            name: db-name
+            vaule: {{.Values.env.db-name}}
           ports:
             - name: http
               containerPort: {{ .Values.containerPort }}
